# swarm-task

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  publish-pypi.yml  release.yml
swarm_task/: __init__.py  task.py
swarm_task/core/: context.py  exceptions.py  results.py  types.py
swarm_task/evaluators/: __init__.py  base.py  custom.py  passthrough.py  schema.py
swarm_task/utils/: __init__.py  validation.py
tests/: conftest.py  test_task.py
tests/test_core/: test_context.py  test_results.py  test_types.py
tests/test_evaluators/: test_base.py  test_custom.py  test_schema.py
