[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "swarm-task"
dynamic = ["version"]
description = "Lightweight task orchestration for iterative AI evaluation loops"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tomiwa Adey", email = "captaintommy787@gmail.com" }]
keywords = ["ai", "evaluation", "agents", "validation", "tasks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "build==1.4.0",
  "hatch-vcs>=0.4",
  "mypy==1.12.1",
  "pytest==8.3.2",
  "pytest-asyncio==0.24.0",
  "ruff==0.6.4",
]

[project.urls]
Repository = "https://github.com/logarith-ms/swarm-task"
Issues = "https://github.com/logarith-ms/swarm-task/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["swarm_task"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
